kikar_hamedina/static/css/newest.css
/*
Colors

I'm not using rgb for any special reason. It was just the easiest way for me to get the colours
used in the pdf design.

darker-gray: rgb(40, 44, 54) - for the extra popout sidemenu
dark-gray: rgb(49, 53, 64) - for the sidebar
gray:  rgb(247,247,247) - for the navbar
dark-blue: rgb(0, 81, 144) - brand, links
blue-sidebar-hover: rgb(0, 60, 106)
gray-social-icons: rgb(233, 234, 236)
blue-social-stats-icons: rgb(40, 70, 120)

// not using:
blue-link-color: rgb(40, 70, 120)
*/

@font-face {
  font-family: 'Alef';
  src: url('../fonts/Alef-Bold.eot');
  src: url('../fonts/Alef-Bold.eot?#iefix') format('embedded-opentype'),
  url('../fonts/Alef-Bold.woff') format('woff'),
  url('../fonts/Alef-Bold.ttf') format('truetype'),
  url('../fonts/Alef-Bold.svg#alefbold') format('svg');
  font-weight: bold;
  font-style: normal;
}

@font-face {
  font-family: 'Alef';
  src: url('../fonts/Alef-Regular.eot');
  src: url('../fonts/Alef-Regular.eot?#iefix') format('embedded-opentype'),
  url('../fonts/Alef-Regular.woff') format('woff'),
  url('../fonts/Alef-Regular.ttf') format('truetype'),
  url('../fonts/Alef-Regular.svg#alefregular') format('svg');
  font-weight: normal;
  font-style: normal;

}

* {
  font-family: 'Alef', 'Helvetica Neue', Helvetica, Arial, sans-serif;
}

/*html, body {*/
  /*height: 100%;*/
/*}*/

body {
  text-align: right;
  direction: rtl;
  background-color: rgb(49, 53, 64);
  padding-top: 60px;
}
@media (min-width: 768px) {
  body {
    padding-top: 80px;
  }
}

a {
  /*color: rgb(40, 70, 120);*/
  color: rgb(0, 81, 144);
}

.top-bar {
  /*height: 100%;*/
  /*height: 60px;*/
  /*line-height: 60px;*/
  top: 0;
  position: fixed;
  right: 0;
  left: 0;
  z-index: 1030;
}
@media (min-width: 768px) {
  .top-bar {
    height: 80px;
    line-height: 80px;
  }
}

.logo {
  height: 60px;
  line-height: 60px;
  float: right;
  background-color: rgb(0, 81, 144);
  color: white;
  /*height: 100%;*/
  width: 100%;
  display: block;
  text-align: center;
}
@media (min-width: 768px) {
  .logo {
    width: 20%;
    height: 80px;
    line-height: 80px;
  }
}

.logo > a > img {
  max-width: 80%;
  max-height: 70%;
}

/* mobile menu */
#pull-menu {
  color: white;
  font-size: 30px;
  position: absolute;
  right: 15px;
  top: 0;
  float: right;
}
#pull-menu:hover {
  text-decoration: none;
}
#pull-menu {
  /*display: block;*/
  /*background-color: #283744;*/
  /*width: 100%;*/
  /*position: relative;*/
}
/*#pull-menu:after {*/
  /*content:"";*/
  /*background: url('nav-icon.png') no-repeat;*/
  /*background-color: green;*/
  /*width: 30px;*/
  /*height: 30px;*/
  /*display: inline-block;*/
  /*position: absolute;*/
  /*right: 15px;*/
  /*top: 10px;*/
/*}*/
@media (min-width: 768px) {
  #pull-menu {
    display: none;
  }
}

.nav-bar {
  display: none;
  background-color: rgb(247, 247, 247);
}
@media (min-width: 768px) {
  .nav-bar {
    display: block;
    float: right;
    /*background-color: rgb(247, 247, 247);*/
    height: 100%;
    width: 80%;
  }
}

.search {
  width: 100%;
  /*padding: 10px 10px;*/
  padding: 75px 10px 15px 10px;
}

@media (min-width: 768px) {
  .search {
    width: 65%;
    float: right;
    font-weight: 900;
    font-size: 16px;
    padding: 0;
    padding-right: 20px;
  }
}

.search > .glyphicon-search {
  padding-left: 10px;
}

.search > input {
  outline-width: 0;
  border: 0;
  /*
  better solution for search bar is like the second answer here:
  http://stackoverflow.com/questions/773517/style-input-element-to-fill-remaining-width-of-its-container
  would allow us to do width 100% for the input
  */
  width: 88%;
  background-color: transparent;
  line-height: 28px;
  height: 28px;
}

/* search dropdown */

#search-results-list {
  display: none; /*hidden by default. shown by js when there are autocomplete results*/

  position: relative;

  color: black;
  list-style: none;
  /*background-color: #fff;*/
  
  background-color: rgb(247,247,247);
  border: 1px solid rgb(232, 232, 232);

  z-index: 2000;
  max-height: 400px;
  overflow-y: auto;
  line-height: 20px;
  padding: 0;
  margin-top: 10px;

  font-size: 14px;
}

@media (min-width: 768px) {
  #search-results-list {
    right: -20px;
    margin-top: 0;
  }
}

li.result-container {
  border-bottom: 1px solid rgb(232, 232, 232);
  padding: 10px 20px;
}

li.result-container:hover {
  background-color: rgb(0, 81, 144);
}

li.result-container:hover a {
  color: white;
  text-decoration: none;
}

.result-main-text {
  font-weight: bold;
}

.result-sub-text {
  font-size: 12px;
}

/* end of search dropdown */

.nav-bar-items {
  width: 100%;
  list-style: none;
  padding: 0;
  overflow: auto;
  border-top: 1px solid #eeeeee;
}

.nav-bar-items > li {
  float: right;
  width: 33.333333%;
  text-align: center;
  padding: 15px 0;
}

.nav-bar-items > li:hover {
  background-color: rgb(0, 81, 144);
}

.nav-bar-items > li:hover > a {
  color: white;
}

@media (min-width: 768px) {
  .nav-bar-items {
    width: 35%;
    float: right;
    overflow: none;
    border-top: 0;
  }

  .nav-bar-items > li {
    float: left;
    display: block;
    position: relative;
    padding: 0 20px;
    /*border-right: 1px solid #adadad;*/
    /*indented border effect*/
    border-right: 1px solid rgb(232, 232, 232);
    border-left: 1px solid #fff;
  }
}

/*#indented ul li:first-child {border-left: none;}*/
/*#indented ul li:last-child {border-right: none;}*/

.nav-bar-items > li > a {
  text-decoration: none;
  color: rgb(102, 102, 102);
  font-weight: 600;
  /*display: block;*/
}

/* Hide for mobile, show later */
.sidebar {
  display: none;
}
@media (min-width: 768px) {
  .sidebar {
    /*position: fixed;*/
    /*top: 80px;*/
    /*bottom: 0;*/
    /*right: 0;*/
    /*z-index: 1000;*/
    /*overflow-x: hidden;*/
    /*overflow-y: auto; *//* Scrollable contents if viewport is shorter than content. */

    display: block;
    height: 100%;
    float: right;
    width: 20%;
    padding: 20px 0;
    background-color: rgb(49, 53, 64);
    color: white;
  }
}

.nav-sidebar {
  list-style: none;
  padding: 0;
  padding-right: 20px;
  /*padding-top: 20px;*/
  /*padding-right: 10%;*/
}

.nav-sidebar > li {
  width: 100%;
  /*padding: 2px 0;*/
}

.nav-sidebar > li > a, nav.sidebar ul ul li a {
  /*padding: 2px 0;*/
  color: #ffffff;
  display: block;
  padding: 5px 10px;
  /*padding: 10px 10px 10px 0;*/
}

.nav-sidebar > li > a:hover {
  background-color: rgb(0, 60, 106);
  text-decoration: none;
  /*background-color: rgb(0, 81, 144);*/
}

.nav-sidebar-heading {
  color: white;
  font-weight: 600;
  font-size: 16px;
  padding: 10px;
  padding-top: 0;
}

nav.sidebar > hr {
  margin-top: 15px;
  margin-bottom: 15px;
  border-top: 1px solid rgb(56, 60, 73);
  border-bottom: 1px solid rgb(40, 43, 52);
  margin-right: 10%;
  margin-left: 10%;
}

/* popout nav */
nav.sidebar ul ul {
  display: none;
}

nav.sidebar ul li:hover > ul {
  display: block;
}

nav.sidebar ul {
  /*position: relative;*/
}
nav.sidebar ul:after {
  /*content: ""; clear: both; display: block;*/
}

@media (min-width: 768px) {
  nav.sidebar ul ul {
    z-index: 2000;
    position: fixed;
    top: 80px;
    bottom: 0px;
    right: 20%;
    background-color: rgb(40, 44, 54);
    width: 20%;
    list-style: none;
    padding-top: 20px;
    padding-bottom: 20px;
    padding-right: 20px;
    /*max-height: 300px;*/
    overflow-y: auto;
  }
}

nav.sidebar ul ul li {

}

nav.sidebar ul ul li a {

}

nav.sidebar ul ul li a:hover {
  text-decoration: underline;
  color: #ffffff;
}

/*nav ul ul li {*/
  /*float: none;*/
  /*border-top: 1px solid #6b727c;*/
  /*border-bottom: 1px solid #575f6a;*/
  /*position: relative;*/
/*}*/
/*nav ul ul li a {*/
  /*padding: 15px 40px;*/
  /*color: #fff;*/
/*}*/
/*nav ul ul li a:hover {*/
  /*background: #4b545f;*/
/*}*/



.main-area {
  width: 100%;
  height: 100%;
  float: right;
  /*height: 800px;*/
  background-color: #fff ;
  padding: 30px 0;
}
@media (min-width: 768px) {
  .main-area {
    width: 80%;
  }
}

.posts-container {
  float: right;
  height: 100%;
  width: 100%;
  background-color: #fff;
}
@media (min-width: 768px) {
  .posts-container {
    width: 60%;
  }
}

/* this gives us a vertical horizontal line next to the posts */
.posts-vertical-line-left {
  border-left: 1px solid #eeeeee;
  /*margin: 30px 0;*/
  /*margin: 20px 0 0 0;*/
  /*padding: 0;*/
  /*height: 100%;*/
  /*margin: 20px 0;*/
  /*padding: 20px 12%;*/
}

.posts {
  /*padding: 20px 60px;*/
  padding: 0 8%;
}

.post {

}

.post-mk-image {
  float: right;
  width: 70px;
  height: 70px;
  margin-left: 10px;
  margin-bottom: 10px;
}

.post-head {
  float: right;
}

.post-mk-name {
  font-size: 16px;
  font-weight: 600;
}

.post-time {

}

.post-content {
  float: right;
}

.post-text {

}

.post-image {
  max-width: 100%;
}

.post-social-stats {
  float: left;
  font-size: 14px;
  background-color: rgb(233, 234, 236);
  padding: 10px 15px;
  margin-top: 10px;

  /* rounded corners */
  /* using something like sass with compass makes this a lot easier... consider using in the future */
  -moz-border-radius: 13px;
  -webkit-border-radius: 13px;
  border-radius: 13px; /* future proofing */
  -khtml-border-radius: 13px; /* for old Konqueror browsers */
}

.post-social-stats > .glyphicon {
  /*color: rgb(0, 81, 144);*/
  color: rgb(40, 70, 120);
}

.extra-info {
  display: none;
}
@media (min-width: 768px) {
  .extra-info {
    display: block;
    float: right;
    /*background-color: orange;*/
    width: 40%;
    /*padding: 0 30px;*/
    padding: 0 6%;
  }
}

.extra-info-group > ul {
  padding-right: 0;
}

.extra-info-group > ul > li {
  list-style: none;
}

